# GenomeWiz

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  genomewiz.db  pyproject.toml  requirements-dev.txt  requirements.txt  sitecustomize.py
alembic/versions/: 20250810_init_evidence.py
app/: main.py
app/core/: config.py
app/db/: base.py  models.py
app/routers/: consensus.py  labels.py  sv.py
app/schemas/: test_label_routes.py  test_sv_routes.py
app/services/: rendering.py
evidence/: gwplot_render.R
itsdangerous/: __init__.py  exc.py  signer.py
jwt/: __init__.py
scripts/: demo_load_sv.py  init_db.py
services/: gwplot_renderer.py
src/: db.py
src/genomewiz/: cli.py  config.py  main.py
src/genomewiz/core/: auth.py  config.py  security.py
src/genomewiz/db/: base.py  models.py
src/genomewiz/models/: base.py  evidence.py  render_artifact.py
src/genomewiz/routers/: annotation.py  auth.py  consensus.py  evidence.py  export.py  labels.py  sv.py
src/genomewiz/schemas/: consensus.py  evidence.py  label.py  sv.py
src/genomewiz/services/: gwplot_renderer.py  rendering.py  storage.py
src/genomewiz/services/utils/: hashing.py
tests/: conftest.py  test_auth_role.py  test_health.py  test_label_routes.py  test_sv_routes.py
