[project]
name = "genomewiz"
version = "0.1.0"
description = "GenomeWiz: Expert crowdsourcing of structural-variant labels for Dysgu"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg2-binary>=2.9; platform_system!='Windows'",
  "psycopg[binary]>=3.2; platform_system=='Windows'",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "pandas>=2.2",
  "authlib>=1.3",
  "pyjwt>=2.9",
]


[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "types-python-dateutil",
]

[tool.ruff]
line-length = 100

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["genomewiz*"]
exclude = ["tests*", "scripts*", "evidence*", "client*"]
